--- a/test.html
+++ b/test.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR Real-time Segmentation (WebGPU)</title>
+  <title>AR Real-time Segmentation (Optimized Input)</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgpu"></script>
   <style>
     body { margin: 0; overflow: hidden; }
@@ -15,7 +16,7 @@
       height: 100vh;
       z-index: 10;
       pointer-events: none;
-      transform: scaleX(-1);
+      transform: rotate(180deg) scaleX(-1);
     }
     #info {
       position: absolute;
@@ -53,9 +54,19 @@
     let gl, session, glBinding;
     const maskCanvas = document.getElementById('maskCanvas');
     const maskCtx = maskCanvas.getContext('2d');
-    const tempCanvas = document.createElement('canvas');
-    const tempCtx = tempCanvas.getContext('2d');
+    const maskTempCanvas = document.createElement('canvas');
+    maskTempCanvas.width = 224;
+    maskTempCanvas.height = 224;
     const processingLock = { busy: false };
+
+    const cameraCanvas = document.createElement('canvas');
+    const cameraCtx = cameraCanvas.getContext('2d');
+
+    const resizeCanvas = document.createElement('canvas');
+    resizeCanvas.width = 224;
+    resizeCanvas.height = 224;
+    const resizeCtx = resizeCanvas.getContext('2d');
+
     let fpsHistory = [];
 
     async function loadModel() {
@@ -64,10 +75,9 @@
         await tf.ready();
         log('Using WebGPU backend\n');
       } catch (e) {
-        log('WebGPU init failed, falling back to WebGL...');
         await tf.setBackend('webgl');
         await tf.ready();
-        log('Using WebGL backend\n');
+        log('WebGPU unavailable, using WebGL\n');
       }
       try {
         model = await tf.loadLayersModel('jsModel/model.json');
@@ -78,7 +88,8 @@
     }
 
     function log(msg) {
-      document.getElementById('info').textContent = "Status:\n" + msg;
+      const infoBox = document.getElementById('info');
+      infoBox.textContent = "Status:\n" + msg;
     }
 
     async function startAR() {
@@ -87,7 +98,7 @@
 
       const canvas = document.createElement('canvas');
       document.body.appendChild(canvas);
-      gl = canvas.getContext('webgl', { xrCompatible: true });
+      gl = canvas.getContext('webgl', { xrCompatible: true, alpha: false, antialias: false });
 
       try {
         session = await navigator.xr.requestSession('immersive-ar', {
@@ -113,53 +124,63 @@
         if (!pose) return;
 
         const view = pose.views[0];
-        const tex = glBinding.getCameraImage(view.camera);
-        if (!tex) return;
+        const cameraTexture = glBinding.getCameraImage(view.camera);
+        if (!cameraTexture) return;
 
-        processingLock.busy = true;
-        const w = view.camera.width;
-        const h = view.camera.height;
-        tempCanvas.width = 224;
-        tempCanvas.height = 224;
+        const cameraWidth = view.camera.width;
+        const cameraHeight = view.camera.height;
 
-        const fb = gl.createFramebuffer();
-        gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
-        gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
+        if (cameraCanvas.width !== cameraWidth || cameraCanvas.height !== cameraHeight) {
+          cameraCanvas.width = cameraWidth;
+          cameraCanvas.height = cameraHeight;
+        }
 
         const tPreStart = performance.now();
 
-        const pixels = new Uint8Array(w * h * 4);
-        gl.readPixels(0, 0, w, h, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
-        const imageData = new ImageData(new Uint8ClampedArray(pixels), w, h);
+        const fb = gl.createFramebuffer();
+        gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
+        gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, cameraTexture, 0);
 
-        createImageBitmap(imageData).then(bitmap => {
-          tempCtx.drawImage(bitmap, 0, 0, 224, 224);
-          const input = tf.tidy(() => tf.browser.fromPixels(tempCanvas).toFloat().div(255).expandDims());
-          const tPreEnd = performance.now();
+        const pixels = new Uint8Array(cameraWidth * cameraHeight * 4);
+        gl.readPixels(0, 0, cameraWidth, cameraHeight, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
 
-          const prediction = model.predict(input).squeeze();
+        const imageData = new ImageData(new Uint8ClampedArray(pixels), cameraWidth, cameraHeight);
+        cameraCtx.putImageData(imageData, 0, 0);
 
-          prediction.data().then(() => {
-            const tPredictEnd = performance.now();
-            tf.browser.toPixels(tf.sub(1, prediction), tempCanvas).then(() => {
-              const tPostEnd = performance.now();
-              maskCanvas.width = window.innerWidth;
-              maskCanvas.height = window.innerHeight;
-              maskCtx.clearRect(0, 0, maskCanvas.width, maskCanvas.height);
-              maskCtx.drawImage(tempCanvas, 0, 0, maskCanvas.width, maskCanvas.height);
+        resizeCtx.drawImage(cameraCanvas, 0, 0, 224, 224);
 
-              tf.dispose([input, prediction]);
-              processingLock.busy = false;
+        processingLock.busy = true;
 
-              const now = performance.now();
-              const frameTime = now - lastFrameTime;
-              lastFrameTime = now;
-              fpsHistory.push(1000 / frameTime);
-              if (fpsHistory.length > 30) fpsHistory.shift();
-              const avgFps = fpsHistory.reduce((a, b) => a + b, 0) / fpsHistory.length;
+        const input = tf.tidy(() => {
+          const image = tf.browser.fromPixels(resizeCanvas);
+          return image.toFloat().div(255).expandDims();
+        });
 
-              log(`Pre: ${(tPreEnd - tPreStart).toFixed(1)}ms\nInfer: ${(tPredictEnd - tPreEnd).toFixed(1)}ms\nPost: ${(tPostEnd - tPredictEnd).toFixed(1)}ms\nFPS: ${avgFps.toFixed(1)}`);
-            });
+        const tPreEnd = performance.now();
+
+        const prediction = model.predict(input).squeeze();
+
+        prediction.data().then(() => {
+          const tPredictEnd = performance.now();
+
+          tf.browser.toPixels(tf.sub(1, prediction), maskTempCanvas).then(() => {
+            const tPostEnd = performance.now();
+
+            maskCanvas.width = window.innerWidth;
+            maskCanvas.height = window.innerHeight;
+            maskCtx.drawImage(maskTempCanvas, 0, 0, maskCanvas.width, maskCanvas.height);
+
+            tf.dispose([input, prediction]);
+            processingLock.busy = false;
+
+            const now = performance.now();
+            const frameTime = now - lastFrameTime;
+            lastFrameTime = now;
+            fpsHistory.push(1000 / frameTime);
+            if (fpsHistory.length > 30) fpsHistory.shift();
+            const avgFps = fpsHistory.reduce((a, b) => a + b, 0) / fpsHistory.length;
+
+            log(`Preprocess: ${(tPreEnd - tPreStart).toFixed(1)} ms\nPredict: ${(tPredictEnd - tPreEnd).toFixed(1)} ms\nPostprocess: ${(tPostEnd - tPredictEnd).toFixed(1)} ms\nFPS: ${avgFps.toFixed(1)}`);
           });
         });
       });
