--- a/test.html
+++ b/test.html
@@ -62,6 +62,7 @@
     resizeCanvas.height = 224;
     const resizeCtx = resizeCanvas.getContext('webgl2');
     let program, positionBuffer;
+    let fb;
     let fpsHistory = [];
 
     function log(msg) {
@@ -113,10 +114,20 @@
         -1, 1, 1, -1, 1, 1
       ]), gl.STATIC_DRAW);
 
+      fb = gl.createFramebuffer();
+      gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
+      const tex = gl.createTexture();
+      gl.bindTexture(gl.TEXTURE_2D, tex);
+      gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, 224, 224, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
+      gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
+
       return { program: prog, positionBuffer: posBuf };
     }
 
     function drawToResizeCanvas(gl, sourceTex) {
+      gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
       gl.viewport(0, 0, 224, 224);
       gl.useProgram(program);
       const loc = gl.getAttribLocation(program, 'position');
